--- a/templates/base.html
+++ b/templates/base.html
@@ -20,27 +20,18 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="http://localhost:8000/">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Cadastro</a>
+        <a class="nav-link" href="http://127.0.0.1:8000/auth/cadastro/">Cadastro Usuário</a>
       </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Categorias
-        </a>
-            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Livros</a>
-              <a class="dropdown-item" href="#">Revistas</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Quem Somos</a>
-            </div>
-      </li>
+      
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+          <a class="nav-link" href="http://127.0.0.1:8000/admin">Acesso Admin</a>
+        </li>
+    </ul>
   </div>
 </nav>
     {%block 'conteudo' %} {% endblock %}
