--- a/usuarios/templates/cadastro.html
+++ b/usuarios/templates/cadastro.html
@@ -1,10 +1,42 @@
 {% extends 'base.html' %}
 
-{% block 'titulo' %} Cadastro {% endblock %}
+{% block 'titulo' %} Cadastro Usuário {% endblock %}
 
 {% block 'conteudo' %}
 
 <div class="container">
+
+    {% if status == '0' %}
+        <div class="alert alert-success" role="alert">
+            Cadastro realizado com sucesso!
+        </div>
+    {% endif %}
+
+    {% if status == '1' %}
+        <div class="alert alert-danger" role="alert">
+            Nome e email não podem estar vazios!
+        </div>
+    {% endif %}
+
+    {% if status == '2' %}
+        <div class="alert alert-danger" role="alert">
+            Sua senha deve conter pelo menos 8 caracteres!
+        </div>
+    {% endif %}
+
+    {% if status == '3' %}
+        <div class="alert alert-danger" role="alert">
+            Usuário ja existe no sistema!
+        </div>
+    {% endif %}
+
+    {% if status == '4' %}
+        <div class="alert alert-danger" role="alert">
+            Erro interno do sistema!
+        </div>
+    {% endif %}
+
+
     <div class="row">
         <div class="col-md-3">
         </div>
