atualizando index e static

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -1,10 +1,32 @@
-{% extends 'base.html' %}
 
+
+{% extends 'base.html' %}
+{% load static %}
 {% block 'titulo' %} Home {% endblock %}
 
 {% block 'conteudo' %}
 
+<div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block w-100" src="{% static 'home/img/banner.png' %}" alt="First slide">
+                    </div>
+                </div>
 
+<div class="container">
+    <div class="row">
+        <div class="col-md-3">
+            teste
+        </div>
+
+        <div class="col-md">
+            teste
+        </div>
+
+        <div class="col-md-3">
+            teste
+        </div>
+</div>
 
 
 {% endblock  %}
