atualizando index e static

--- a/home/templates/index.html
+++ b/home/templates/index.html
@@ -12,20 +12,62 @@
                         <img class="d-block w-100" src="{% static 'home/img/banner.png' %}" alt="First slide">
                     </div>
                 </div>
-
+<br>
+<br>
 <div class="container">
     <div class="row">
-        <div class="col-md-3">
-            teste
+        <div class="col-md">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="{% static 'home/img/livro1.png' %}" alt="Card image cap">
+                <div class="card-body">
+                    <p class="card-text">Esse é um exemplo de livro publicado na vitrini.</p>
+                </div>
+            </div>
         </div>
 
         <div class="col-md">
-            teste
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="{% static 'home/img/livro2.png' %}" alt="Card image cap">
+                <div class="card-body">
+                    <p class="card-text">Esse é um exemplo de livro publicado na vitrini.</p>
+                </div>
+            </div>
         </div>
 
-        <div class="col-md-3">
-            teste
+        <div class="col-md">
+            <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="{% static 'home/img/livro3.png' %}" alt="Card image cap">
+                <div class="card-body">
+                    <p class="card-text">Esse é um exemplo de livro publicado na vitrini.</p>
+                </div>
+            </div>
         </div>
+</div>
+<br>
+<br>
+<div class="card text-center">
+  <div class="card-header">
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Nossa Missão</h5>
+    <p class="card-text">Publicar trabalhos científicos com celeridade, rigor científico e qualidade
+de editoração. E a visão é o reconhecimento da empresa como uma referência nacional em
+qualidade acadêmica para a divulgação científica..</p>
+  </div>
+  <div class="card-footer text-muted">
+  </div>
+</div>
+<br>
+<div class="card text-center">
+  <div class="card-header">
+  </div>
+  <div class="card-body">
+    <h5 class="card-title">Nossa Visão</h5>
+    <p class="card-text">Buscamos o reconhecimento da empresa como uma referência nacional em
+qualidade acadêmica para a divulgação científica.</p>
+  </div>
+  <div class="card-footer text-muted">
+  </div>
 </div>
 
 
